[gd_scene load_steps=4 format=3 uid="uid://ge0nk28y3vqy"]

[ext_resource type="Script" path="res://scenes/ui/input_fields/vec3_field.gd" id="1_msry1"]
[ext_resource type="SystemFont" uid="uid://1c75lqbvqb5e" path="res://fonts/font.tres" id="2_0hchc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rqdxl"]

[node name="vec3_field" type="Panel"]
offset_right = 180.0
offset_bottom = 24.0
size_flags_horizontal = 3
script = ExtResource("1_msry1")

[node name="layout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -2.0
offset_right = 13.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.92, 1)
theme_override_constants/separation = 8

[node name="name" type="Label" parent="layout"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_0hchc")
theme_override_font_sizes/font_size = 16
text = "Name"
vertical_alignment = 1

[node name="value0" type="LineEdit" parent="layout"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0hchc")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_rqdxl")
placeholder_text = "0"
flat = true
caret_blink = true

[node name="value1" type="LineEdit" parent="layout"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_0hchc")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_rqdxl")
placeholder_text = "0"
flat = true
caret_blink = true

[node name="value2" type="LineEdit" parent="layout"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 1
theme_override_fonts/font = ExtResource("2_0hchc")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_rqdxl")
placeholder_text = "0"
flat = true
caret_blink = true

[connection signal="text_changed" from="layout/value0" to="." method="_on_x_changed"]
[connection signal="text_submitted" from="layout/value0" to="." method="_on_vec3_submitted"]
[connection signal="text_changed" from="layout/value1" to="." method="_on_y_changed"]
[connection signal="text_submitted" from="layout/value1" to="." method="_on_vec3_submitted"]
[connection signal="text_changed" from="layout/value2" to="." method="_on_z_changed"]
[connection signal="text_submitted" from="layout/value2" to="." method="_on_vec3_submitted"]
